@@ -90,6 +90,7 @@
     <Translation ID="PRR_OPTION_VAL" String="Ignore 'low land value' complaint" />
     <Translation ID="PRR_OPTION_SVC" String="Ignore 'too few services' complaint" />
     <Translation ID="PRR_OPTION_HST" String="Make all plopped growables historical" />
+    <Translation ID="PRR_OPTION_BLC" String="Lock plopped growables levels using Advanced Building Level Control" />
     <Translation ID="PRR_OPTION_RPL" String="RICO ploppable buildings" />
     <Translation ID="PRR_OPTION_RGR" String="RICO growable buildings" />
     <Translation ID="PRR_OPTION_RCO" String="All RICO buildings (including growables)" />
